--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,8 @@ appcompat = "1.6.1"
 material = "1.10.0"
 constraint-layout="2.1.4"
 compose-compiler="1.5.3"
+paparazzi="1.3.1"
+classgraph="4.8.163"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -31,11 +33,15 @@ material3 = { group = "androidx.compose.material3", name = "material3" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintLayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraint-layout"}
+classgraph = { group = "io.github.classgraph", name = "classgraph", version.ref = "classgraph"}
+kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "org-jetbrains-kotlin-android"}
 
 [plugins]
 com-android-application = { id = "com.android.application", version.ref = "agp" }
 org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
 com-android-library = { id = "com.android.library", version.ref = "agp" }
+paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
 
 [bundles]
-
+compose = ["ui", "ui-graphics", "ui-tooling", "ui-tooling-preview", "material3", "material"]
+compose-test = ["ui-test-manifest", "ui-test-junit4"]
