--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,17 @@
 [versions]
-agp = "8.6.0"
-org-jetbrains-kotlin-android = "1.9.10"
-core-ktx = "1.12.0"
+agp = "8.6.1"
+kotlin = "2.0.20"
+core-ktx = "1.13.1"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
-espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.6.2"
-activity-compose = "1.8.1"
-compose-bom = "2023.10.01"
-appcompat = "1.6.1"
-material = "1.10.0"
+androidx-test-ext-junit = "1.2.1"
+espresso-core = "3.6.1"
+lifecycle-runtime-ktx = "2.8.6"
+activity-compose = "1.9.2"
+compose-bom = "2024.09.02"
+appcompat = "1.7.0"
+material = "1.12.0"
 constraint-layout="2.1.4"
-compose-compiler="1.5.3"
-paparazzi="1.3.1"
+paparazzi = "1.3.4"
 classgraph="4.8.163"
 
 [libraries]
@@ -34,14 +33,15 @@ appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "a
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 constraintLayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraint-layout"}
 classgraph = { group = "io.github.classgraph", name = "classgraph", version.ref = "classgraph"}
-kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "org-jetbrains-kotlin-android"}
-
-[plugins]
-com-android-application = { id = "com.android.application", version.ref = "agp" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "org-jetbrains-kotlin-android" }
-com-android-library = { id = "com.android.library", version.ref = "agp" }
-paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
+kotlin-reflect = { group = "org.jetbrains.kotlin", name = "kotlin-reflect", version.ref = "kotlin" }
 
 [bundles]
 compose = ["ui", "ui-graphics", "ui-tooling", "ui-tooling-preview", "material3", "material"]
 compose-test = ["ui-test-manifest", "ui-test-junit4"]
+
+[plugins]
+com-android-application = { id = "com.android.application", version.ref = "agp" }
+org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+com-android-library = { id = "com.android.library", version.ref = "agp" }
+paparazzi = { id = "app.cash.paparazzi", version.ref = "paparazzi" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
